fix safari click event on iphone

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -116,4 +116,11 @@ div .hk-id{
   a.crossroads_email{
     text-decoration: underline;
   }
+  .request-add-remove-section{
+    .req-more-goods {
+      div.add_more_request{
+        cursor: pointer !important;
+      }
+    }
+  }
 }
